[package]
name = "owning_ref"
version = "0.4.1"
authors = ["Marvin Löbel <loebel.marvin@gmail.com>"]
license = "MIT"

description = "A library for creating references that carry their owner with them."
readme = "README.md"
documentation = "http://kimundi.github.io/owning-ref-rs/owning_ref/index.html"

repository = "https://github.com/Kimundi/owning-ref-rs"
keywords = ["reference", "sibling", "field", "owning"]

[dependencies]
stable_deref_trait = { git = "https://github.com/sunfishcode/stable_deref_trait", branch = "rustc-dep-of-std", default-features = false }

# Special dependencies used in rustc-dep-of-std mode.
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
compiler_builtins = { version = '0.1.49', optional = true }

[features]
default = ["std"]
std = []
rustc-dep-of-std = [
    "dep:core",
    "dep:alloc",
    "stable_deref_trait/rustc-dep-of-std",
    "compiler_builtins"
]
